layout/generic/nsLineLayout.cpp
@@ -2173,7 +2173,14 @@ nsLineLayout::VerticalAlignFrames(PerSpanData* psd)
       // inverted relative to block direction.
       nscoord revisedBaselineBCoord = baselineBCoord - offset *
         lineWM.FlowRelativeToLineRelativeFactor();
-      pfd->mBounds.BStart(lineWM) = revisedBaselineBCoord - pfd->mAscent;
+      if (lineWM.IsVertical() && !lineWM.IsSideways()) {
+        // If we're using a dominant center baseline, we align with the center
+        // of the frame being placed (bug 1133945).
+        pfd->mBounds.BStart(lineWM) =
+          revisedBaselineBCoord - pfd->mBounds.BSize(lineWM)/2;
+      } else {
+        pfd->mBounds.BStart(lineWM) = revisedBaselineBCoord - pfd->mAscent;
+      }
       pfd->mBlockDirAlign = VALIGN_OTHER;
     }
 
